<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MSU2U</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MSU2U</string>
    <string name="hello">Hello World, Custom Title Bar from CoderzHeaven</string>
    <string name="new_fragment">New fragment</string>
    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="blue">#2554C7</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="orange">#ff9900</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>
    <drawable name="Hotpink">#7D2252</drawable>
    <string name="NamesStatic">Name</string>
    <string name="DepartmentStatic">Department</string>
    <string name="Phone1Static">Phone 1</string>
    <string name="FaxStatic">Fax</string>
    <string name="EmailStatic">Email</string>
    <string name="textview">TextView</string>
    <string name="showMapKey">Map Key</string>
    <string name="parkingShowHide">Show/Hide Parking</string>
    <string name="google_maps_api_key">AIzaSyBK3CRL_8vFQsa44-uMT9bfo-27zFO0wrs</string>

</resources>