<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenu" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:linksClickable="true"
        android:text="@string/DepartmentStatic"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="19dp"
        android:text="@string/EmailStatic"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/phone1EditText"
        android:text="@string/Phone1Static"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/DepartmentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/textview"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DepartmentEditText"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:text="@string/textview"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DepartmentEditText"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/textview"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/phone1EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/emailEditText"
        android:layout_alignParentRight="true"
        android:text="@string/textview"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/faxEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/phone1EditText"
        android:layout_alignParentRight="true"
        android:text="@string/textview"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/DepartmentEditText"
        android:text="@string/FaxStatic"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/photoImageView"
		android:layout_width="60dip"
        android:layout_height="60dip"
        android:src="@drawable/midwesternstatelogo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/photoImageView"
        android:layout_toLeftOf="@+id/nameEditText"
        android:text="@string/NamesStatic"
        android:textColor="#000000"
        android:textSize="16sp" />

</RelativeLayout>